@@ -1,6 +1,7 @@
 Revision history for Dist-Zilla-PluginBundle-DOY
 
 {{$NEXT}}
+      - allow suppressing the done_testing test dep
 
 0.11  2013-06-26
       - fix previous fix
